<resources>

    <string name="app_name">LearningProgramming</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_start">スタート</string>
    <string name="button_option">オプション</string>
    <string name="text_gamemenu">Game Menu</string>
    <string name="button_stageselect">ステージセレクト</string>
    <string name="button_tutorial">チュートリアル</string>
    <string name="button_back">戻る</string>
    <string name="button_reset">リセット</string>
    <string name="title_activity_stage_activity_writer">StageActivityWriter</string>
    <string-array name="GunbitCondition">
        <item >なし</item><item >右に進めたら</item>
        <item >左に進めたら</item>
        <item >後ろに進めたら</item>
        <item >前に進めたら</item>
        <item >前と右に進めたら</item>
        <item >前と左に進めたら</item>
        <item >左右に進めたら</item>
        <item >前と左右に進めたら</item>
        <item >全方向に進めたら</item>
        
    </string-array>
    <string-array name="GunbitAction">
        <item >なし</item><item >前へ進む</item>
        <item >後ろへ進む</item>
        <item >右へ進む</item>
        <item >左へ進む</item>
        
    </string-array>
    <string name="straitcheck">直進On</string>

</resources>